--- a/backend/.graphqlconfig.yml
+++ b/backend/.graphqlconfig.yml
@@ -5,6 +5,6 @@ projects:
       endpoints:
         default: "http://localhost:4444"
   prisma:
-    schemaPath: "src/generated/prisma.graphql"
+    schemaPath: "src/generated/prisma-client/prisma.graphql"
     extensions:
-      prisma: prisma.yml
+      prisma: "prisma/prisma.yml"
