--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "npm-run-all": "^4.1.5",
     "prisma": "1.17.1",
     "prisma-binding": "2.1.6",
+    "prisma-client-lib": "^1.31.1",
     "stripe": "^6.12.1"
   },
   "license": "MIT",
