--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,8 @@
     "nodemailer": "^4.6.8",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
-    "prisma": "1.17.1",
-    "prisma-binding": "2.1.6",
-    "prisma-client-lib": "^1.31.1",
+    "prisma": "^1.33.0",
+    "prisma-client-lib": "^1.33.0",
     "stripe": "^6.12.1"
   },
   "license": "MIT",
