--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,15 @@
     "bcryptjs": "2.4.3",
     "cookie-parser": "^1.4.3",
     "dotenv": "6.0.0",
-    "graphql": "^0.13.2",
-    "graphql-cli": "^2.16.7",
-    "graphql-yoga": "1.16.2",
+    "graphql": "^14.3.1",
+    "graphql-cli": "^3.0.11",
+    "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "8.3.0",
     "nodemailer": "^4.6.8",
     "nodemon": "^1.18.7",
     "npm-run-all": "^4.1.5",
-    "prisma": "^1.33.0",
-    "prisma-client-lib": "^1.33.0",
+    "prisma": "^1.34.0",
+    "prisma-client-lib": "^1.34.0",
     "stripe": "^6.12.1"
   },
   "license": "MIT",
